# dotfiles

./: .gitignore  .stow-global-ignore  .stowrc  Manual.md  PSScriptAnalyzerSettings.psd1  README.md  Simple.md  check-errors  check-nu-scripts.nu  dev-setup.md  distrobox.ini  flake.nix  lefthook.yml  my-qemusystemx86.pp  my-qemusystemx86.te  notes.md  setup  setup-centos.sh  setup-windows-dev.ps1  slogs.sh  test-completions.sh  test_slogs.sh  utils  windows-setup-oneliner.ps1
.devcontainer/: Dockerfile  devcontainer.json
bash/: atomic-bashrc
bash/completions/: vm-create.bash
built-in-emacs/: dot-emacs
configs/: alacritty.toml  alacritty.yml  bashrc  gitconfig  kitty.conf  oh-my-zsh-zshrc  shellrc  tmux.conf  wezterm.lua  zgen-zshrc  zshrc
configs/amethyst/: .amethyst
configs/ghostty/: config
configs/shell/: aliases  shellrc
docs/: advanced-setup.md  alternate-setup.md  dt-script.md  ict-create.md  ict.md  incus-ct-create-script.md  incus-ct-script.md  incus-vm-create-script.md  incus-vm-script.md  ivm-create.md  ivm-script.md  libvirt-disk-passthrough.md  libvirt-usb-management.md  logging.md  manual-setup.md  mp-vm.md  multipass-vm-script.md  nixos.md  notes.md  os-recommendations.md  recommended-setup.md  rpm-ostree.md  simple.md  tips.md  ublue.md  vm-coreos.md  vm-create-completion.md  vm-creation.md  vm-script.md  vm-usb-management.md  vm.md  windows-setup.md
docs/dbox/: README.md
docs/dt/: README.md
docs/examples/: bash-function
docs/ict/: README.md
docs/ivm/: README.md
docs/pve/: README.md
docs/resources/: math.md
docs/vm/: README.md
docs/vme/: README.md  vme-all.md  vme-tmux.md
dot-local/share/: bashrc
emacs-nano/: dot-emacs
emacs-slim/: dot-emacs
emacs/dot-emacs.d/: init.el
evil/: dot-emacs
extras/: Brewfile  Containerfile  aliases  arch-setup  arch-vm  bash-prompt  config_script.sh  configuration.nix  dnf5.conf  dns-router  emoji  example-flake.nix  homebrew-atomic  i3  incus.sh  konsole.profile  mac  oh-my-zsh-zshrc  paperwm-dconf  run-vm  ublue.json  use-router  wsl-ssh.ps1  wsl-vscode-fix.sh  zgen-zshrc  zsh-prompt
extras/aerospace/: .aerospace.toml
extras/bootc/: Containerfile  build-vm  config.toml  run-vm
extras/brew/: Bundlefile
extras/cline/: config.json
extras/configs/: 98-ilm-dbox-ssh.conf  98-ssh-permissive.conf  99-ssh-hardened.conf
extras/custom-debian/: custom-debian-iso  preseed.cfg
extras/custom-fedora/: custom-fedora-iso  fedora42.ks  live  live.ks  makeiso  netinst-snapper.ks  nvidia.ls  snapper-iso.sh  snapper-kickstart.ks
extras/debian/: btrfs  create-iso  preseed.cfg
extras/ghostty/: config
extras/home-manager/: darwin-dev.nix  darwin-vars.nix  darwin.nix  flake.nix  hardware-configuration.nix  hms  home.nix  nixos.nix  nrs  programs.nix  shell-slim.nix  shell.nix  sys.nix  ui.nix  vars.nix  wsl.nix
extras/multi-os/: dynamic  multi-os-example
extras/nix/: macos-flake.nix  proxmox-flake.nix
extras/nix-dns-router/: flake.nix  vm.nix
extras/nixos/: README.md  doc.md  flake.nix  nixos-ilm  proxmox-flake.nix  rebuild
extras/pm/: .gitignore  install_packages.py  packages.yaml  pyproject.toml
extras/proxmox/: bind-mount-all  bind-mount-guest.sh  bind-mount-host  bind-mount-lxc  debian-vm-template  debian-vm-template.sh  fedora-vm-template  fedora-vm-template.sh  lvm-thin-create  lxc-create  lxc-create.sh  ramfs  rocky-vm-template.sh  samba-on-host.sh  setup  setup.sh  thin-pool  thin-pool-create  ubuntu-vm-template  ubuntu-vm-template.sh  usb-lxc-mount  usb-mount-lxc  usb-mount-lxc.sh  utils
extras/pve/: README.md  bind-mount-all  bind-mount-all-root  bind-mount-host  bind-mount-lxc  blacklist  btrfs-disko.nix  change-ip  ct  ct-create  debian-vm-template  disk-resize-vm  enable-vfio  filebrowser-syncthing  fs-create  grub-config  hostname-ip-mapping  idle-power  ip-change  lvm-thin-create  lxc-create  lxc-mount-usb  net  options.example  pcie-pick  proxmox-scripts  pvm  pvmrc.example  pxc  pxcrc.example  resize-vm-disk  rocky-vm-template  samba-on-host  setup  sway-vms  tailscale-lxc  trixie-to-proxmox  use-ramfs  user-create  users-create  (+16 more)
extras/recommendations/: hardware.md  linux-tools.md  native-programming.md
extras/sample-home-manager/: flake.nix  home.nix
extras/stow/: main.py  pyproject.toml  pystow.py  pystow_test.py
extras/tw/: snapper-cleanup  snapper-config-root
extras/virt/: debian-cloud-image.sh  debian-meta-data  (+2 more)
foot/: foot.ini
git/: dot-gitconfig
home-manager/: README.md
installers/: apt  arch  atomic  common  config  default  dnf  kinoite  mac  post-atomic  shell  suse  ublue
mac-scripts/: JetBrains Mono.terminal  apply-key-remapping  efi-backup  fix-efi-disk  mac-settings  mac-setup  setup.nu  stow.nu  sync.nu
nix/: nixos-confugration.nix
nu/: incus-bridge-on-ubuntu.nu  incus-docker-network-fix.nu  incus-sudo-user.nu  kde-catppuccin.nu  kde-karousel.nu  libvirt-default-network.nu  libvirt-default-xml.nu  libvirt-network-fix.nu  libvirt-network-restore.nu  purge-snap.nu  rofi-logout.nu  rofi-wallpaper.nu  sudo-user.nu  vme-all.nu  vme-tmux.nu  vme.nu
p10/: dot-p10k.zsh
powershell/: Microsoft.PowerShell_profile.ps1
profile/: dot-profile
py/: .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml  repro_tmux.py
py/src/: tmux_grid.py
py/tests/: .pyrightconfig  test_tmux_grid.py
scripts/: git-up  group-installs  installer  installers  installs  shellrc  ssh-server  sudo-user  utils
share/: aliases  bashrc  bind-mount-lxc.sh  dbox-fns  dt-fns  error-handler  exports  find-exec  fns  incus-fns  install-gum  logging  logs  shell-block  shellrc  slog  tbox-fns  thin-pool  utils  view-logs  virt-fns
share/py/: Makefile  README.md  pyinstaller.py  pyproject.toml
starship/: dot-starship.toml  starship-default.toml
tests/: logs_test.sh
vim/: dot-vimrc
windows/: README.md  set-nerd-font.ps1  setup-centos.sh  setup-distro.sh  wezterm.lua  windows-setup-dev-onliner.ps1  windows-setup-dev.ps1  windows-setup-oneliner.ps1  windows-setup.ps1  wsl-enable-systemd.ps1
windows-terminal/: settings.json
zsh/: dot-zshrc
(+451 files in other folders)
