[project]
name = "ilm-scripts"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "you@example.com" }]
# readme = "README.md"
keywords = ["pydantic", "cli", "async"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
  "Typing :: Typed",
]

dependencies = [
  "pydantic",
  "questionary",
  "paramiko",
  "tomli-w",
  "typer",
  "rich",
  "shellingham",
  "cyclopts",
  "ruamel-yaml",
  "aiofiles",
  "inquirerpy",
  "asyncssh",
  "tenacity",
  "async-timeout",
  "aiobreaker",
  "structlog",
  "logfire",
  "result",
  "aiostream",
  "textual",
  "anyio",
]

[project.scripts]
tmux-grid = "src.tmux_grid:app"

[project.optional-dependencies]
dev = [
  "pyright",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "ruff",
  "mypy",
  "pre-commit",
]

[project.urls]
Homepage = "https://github.com/pervezfunction/dotfiles"
Repository = "https://github.com/pervezfunction/dotfiles"
Issues = "https://github.com/pervezfunction/dotfiles/issues"

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.13"
stubPath = "typings"
usePydanticSettings = true
extraPaths = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["*_test.py", "test_*.py"]
addopts = "--strict-markers --tb=short"
filterwarnings = ["ignore::DeprecationWarning", "ignore::UserWarning"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88

exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ty>=0.0.16",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

[tool.ruff.lint]
per-file-ignores = { "*_test.py" = ["S101"] }
select = ["E", "F", "I", "UP", "ASYNC", "RUF"]
extend-select = ["B", "C4", "PIE", "SIM"]
fixable = ["ALL"]

[tool.ruff.lint.isort]
force-sort-within-sections = true
combine-as-imports = true
# known-first-party = ["proxmox_maintenance"]

[tool.pixi.workspace]
name = "ilm-scripts"
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "osx-arm64"]

[tool.pixi.dependencies]
python = "3.13.*"
uv = "*"
anyio = ">=4.12.1,<5"

[tool.pixi.pypi-dependencies]
ilm-scripts = { path = ".", editable = true }

[tool.pixi.feature.dev.pypi-dependencies]
ilm-scripts = { path = ".", editable = true, extras = ["dev"] }

[tool.pixi.environments]
default = ["dev"]
runtime = []

[tool.pixi.tasks]
lint = "uv run --extra dev ruff check"
lint-fix = "uv run --extra dev ruff check --fix"
check = "bash -lc 'uv run --extra dev pyright && uv run --extra dev ruff check --fix && uv run --extra dev pytest'"
fmt = "uv run --extra dev ruff format"
typecheck = "uv run --extra dev pyright"
typecheck-test = "uv run --extra dev pyright --pythonconfig tests/.pyrightconfig tests/"
test = "uv run --extra dev pytest"
pre-commit = "uv run --extra dev pre-commit run --all-files"
# run-example = "uv run script arg1 arg2"
