[project]
name = "stow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = ["pyright>=1.1.402", "pytest>=8.4.1", "ruff>=0.12.2"]

[tool.pyright]
typeCheckingMode = "strict"

[tool.ruff]
# Set the maximum line length.
line-length = 88
# Same as Black.

# Enable Pyflakes `E` and `F` codes by default.
# E501 is ignored by default in the formatter section.
select = ["E", "F", "W", "I", "B", "C4", "UP", "N", "S", "A"]
ignore = []

fixable = [
    "A",
    "B",
    "C",
    "D",
    "E",
    "F",
    "G",
    "I",
    "N",
    "Q",
    "S",
    "T",
    "W",
    "ANN",
    "ARG",
    "BLE",
    "COM",
    "DJ",
    "DTZ",
    "EM",
    "ERA",
    "EXE",
    "FBT",
    "ICN",
    "INP",
    "ISC",
    "NPY",
    "PD",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "SLF",
    "TID",
    "TRY",
    "UP",
    "YTT",
] # Allow autofix for all enabled rules (when `--fix`) is used.
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint]
# Disable the `assert` rule in test files.
per-file-ignores = { "*_test.py" = ["S101"] }

[tool.ruff.lint.isort]
# Sort imports by module, then by member.
force-sort-within-sections = true
